--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -13,7 +13,7 @@
 
   &:hover {
     transform: translateY(-.3rem);
-    box-shadow: 0 1rem 2rem rgba($color-black, .2);
+    box-shadow: 0 1rem 2rem $color-black-light;
 
     &::after {
       transform: scaleX(1.4) scaleY(1.6);
@@ -23,7 +23,7 @@
 
   &:active {
     transform: translateY(-.1rem);
-    box-shadow: 0 .5rem 1rem rgba($color-black, .2);
+    box-shadow: 0 .5rem 1rem $color-black-light;
   }
 
   &--white {
@@ -68,12 +68,12 @@
   &:hover {
     background-color: $color-primary;
     color: $color-white;
-    box-shadow: 0 1rem 2rem rgba($color-black, .15);
+    box-shadow: 0 1rem 2rem $color-black-lighter;
     transform: translateY(-2px);
   }
 
   &:active {
-    box-shadow: 0 .5rem 1rem rgba($color-black, .15);
+    box-shadow: 0 .5rem 1rem $color-black-lighter;
     transform: translateY(0);
   }
 }
