--- a/natours/sass/components/_composition.scss
+++ b/natours/sass/components/_composition.scss
@@ -4,7 +4,7 @@
 
   &__photo {
     width: 55%;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .4);
+    box-shadow: 0 1.5rem 4rem $color-black-dark;
     border-radius: .2rem;
     position: absolute;
     z-index: 10;
@@ -29,7 +29,7 @@
     &:hover {
       outline: 1.5rem solid $color-primary;
       transform: scale(1.05) translateY(.5rem);
-      box-shadow: 0 2.5rem 4rem rgba($color-black, .5);
+      box-shadow: 0 2.5rem 4rem $color-black-darker;
       z-index: 20;
     }
   }
