--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -1,7 +1,7 @@
-.section-about {
+section-about {
   background-color: $color-grey-light-1;
   padding: 25rem 0;
-  margin-top: -20rem;
+  margin-top: -20vh;
 }
 
 .section-features {
@@ -14,4 +14,11 @@
   & > * {
     transform: skewY(7deg);
   }
+
+}
+
+.section-tours {
+  background-color: $color-grey-light-1;
+  padding: 25rem 0 15rem 0;
+  margin-top: -10rem;
 }
