--- a/natours/sass/base/_typography.scss
+++ b/natours/sass/base/_typography.scss
@@ -38,7 +38,7 @@ body {
   -webkit-background-clip: text;
   color: transparent;
   letter-spacing: .2rem;
-  transition: all .2s;
+  transition: $transition-all-quickest;
 
   &:hover {
     transform: skewY(2deg) skewX(15deg) scale(1.1);
