--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -1,14 +1,15 @@
-
 .btn {
-  &:link, &:visited {
+  &, &:link, &:visited {
     text-transform: uppercase;
     text-decoration: none;
     padding: 1.5rem 4rem;
     display: inline-block;
     border-radius: 10rem;
-    transition: all .2s;
+    transition: $transition-all-quickest;
     position: relative;
     font-size: $default-font-size;
+    border: none;
+    cursor: pointer;
   }
 
   &:hover {
@@ -21,7 +22,9 @@
     }
   }
 
-  &:active {
+  &:active,
+  &:focus {
+    outline: none;
     transform: translateY(-.1rem);
     box-shadow: 0 .5rem 1rem $color-black-medium;
   }
@@ -35,6 +38,15 @@
     }
   }
 
+  &--green {
+    background-color: $color-primary;
+    color: $color-white;
+
+    &::after {
+      background-color: $color-primary;
+    }
+  }
+
   &::after {
     content: "";
     display: inline-block;
@@ -45,7 +57,7 @@
     top: 0;
     left: 0;
     z-index: -1;
-    transition: all .4s;
+    transition: $transition-all-normal;
   }
 
   &--animated {
@@ -62,7 +74,7 @@
     text-decoration: none;
     border-bottom: .1rem solid $color-primary;
     padding: .3rem;
-    transition: all .2s;
+    transition: $transition-all-quickest;
   }
 
   &:hover {
