--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -6,7 +6,7 @@
 
   &__side {
     height: 52rem;
-    transition: all .8s ease;
+    transition: $transition-all-slowest ease;
     position: absolute;
     top: 0;
     left: 0;
