--- a/natours/sass/components/_story.scss
+++ b/natours/sass/components/_story.scss
@@ -25,7 +25,7 @@
     height: 100%;
     transform: translateX(-4rem) scale(1.4);
     backface-visibility: hidden;
-    transition: all .5s;
+    transition: $transition-all-slow;
   }
 
   &__text {
@@ -42,7 +42,7 @@
     font-size: 1.7rem;
     text-align: center;
     opacity: 0;
-    transition: all .5s;
+    transition: $transition-all-slow;
     backface-visibility: hidden;
   }
 
