--- a/natours/sass/pages/_home.scss
+++ b/natours/sass/pages/_home.scss
@@ -36,8 +36,8 @@
 .book {
   background-image: linear-gradient(105deg, rgba($color-white, .9) 0%, rgba($color-white, .9) 50%, transparent 50%), url(../img/nat-10.jpg);
   background-size: 100%;
-  border-radius: 3px;
-  box-shadow: 0 1.5rem 4rem rgba($color-black, .2);
+  border-radius: .3rem;
+  box-shadow: 0 1.5rem 4rem $color-black-medium;
 
   height: 50rem;
 
