--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -80,12 +80,12 @@
   &:hover {
     background-color: $color-primary;
     color: $color-white;
-    box-shadow: 0 1rem 2rem $color-black-lighter;
-    transform: translateY(-2px);
+    box-shadow: 0 1rem 2rem $color-black-light;
+    transform: translateY(-.2rem);
   }
 
   &:active {
-    box-shadow: 0 .5rem 1rem $color-black-lighter;
+    box-shadow: 0 .5rem 1rem $color-black-light;
     transform: translateY(0);
   }
 }
