--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -12,9 +12,9 @@
     left: 0;
     width: 100%;
     backface-visibility: hidden;
-    border-radius: 3px;
+    border-radius: .3rem;
     overflow: hidden;
-    box-shadow: 0 1.5rem 4rem $color-black-lighter;
+    box-shadow: 0 1.5rem 4rem $color-black-light;
 
     &--front {
       background-color: $color-white;
@@ -51,8 +51,8 @@
     background-blend-mode: screen;
     -webkit-clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
     clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
-    border-top-left-radius: 3px;
-    border-top-right-radius: 3px;
+    border-top-left-radius: .3rem;
+    border-top-right-radius: .3rem;
 
     &--1 {
       background-image: linear-gradient(to right bottom, $color-secondary-light, $color-secondary-dark),
@@ -120,17 +120,14 @@
         padding: 1rem;
 
         &:not(:last-child) {
-          border-bottom: 1px solid $color-grey-light-2;
+          border-bottom: .1rem solid $color-grey-light-2;
         }
       }
     }
   }
 
   &__cta {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    @include absCenter;
     width: 90%;
     text-align: center;
   }
