--- a/natours/sass/components/_story.scss
+++ b/natours/sass/components/_story.scss
@@ -1,9 +1,9 @@
 .story {
   width: 75%;
   margin: 0 auto;
-  box-shadow: 0 3rem 6rem $color-black-light;
+  box-shadow: 0 3rem 6rem $color-black-lighter;
   background-color: rgba($color-white, .6);
-  border-radius: 3px;
+  border-radius: .3rem;
   padding: 6rem;
   padding-left: 9rem;
   font-size: $default-font-size;
@@ -53,6 +53,6 @@
 
   &:hover &__img {
     transform: translateX(-4rem) scale(1);
-    filter: blur(3px) brightness(80%);
+    filter: blur(.3rem) brightness(80%);
   }
 }
