--- a/natours/sass/layout/_footer.scss
+++ b/natours/sass/layout/_footer.scss
@@ -15,7 +15,7 @@
   }
 
   &__navigation {
-    border-top: 1px solid $color-grey-dark;
+    border-top: .1rem solid $color-grey-dark;
     padding-top: 2rem;
     display: inline-block;
   }
@@ -50,7 +50,7 @@
   }
 
   &__copyright {
-    border-top: 1px solid $color-grey-dark;
+    border-top: .1rem solid $color-grey-dark;
     padding-top: 2rem;
     width: 80%;
     float: right;
