--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -23,6 +23,7 @@ $color-black-light: rgba($color-black, .15);
 $color-black-medium: rgba($color-black, .2);
 $color-black-dark: rgba($color-black, .4);
 $color-black-darker: rgba($color-black, .5);
+$color-black-darkest: rgba($color-black, .8);
 
 //FONT
 $default-font-size: 1.6em;
