--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -65,7 +65,8 @@
   }
 
   &:target &__content {
-
+    opacity: 1;
+    transform: translate(-50%, -50%) scale(1);
   }
 
   &__close {
@@ -85,5 +86,4 @@
       color: $color-primary;
     }
   }
-
 }
