--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -30,7 +30,9 @@ $default-font-size: 1.6em;
 
 //GRID
 $grid-width: 114rem;
+$grid-width-small: 50rem;
 $gutter-vertical: 8rem;
+$gutter-vertical-small: 6rem;
 $gutter-horizontal: 6rem;
 
 //TRANSITION
