--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -10,6 +10,11 @@
   visibility: hidden;
   transition: $transition-all-quick;
 
+  @supports (backdrop-filter: blur(10px)) {
+    backdrop-filter: blur(10px);
+    background-color: $color-black-dark;
+  }
+
   &__content {
     @include absCenter;
 
