--- a/natours/sass/abstracts/_variables.scss
+++ b/natours/sass/abstracts/_variables.scss
@@ -26,7 +26,8 @@ $color-black-darker: rgba($color-black, .5);
 $color-black-darkest: rgba($color-black, .8);
 
 //FONT
-$default-font-size: 1.6em;
+$default-font-size: 1.6rem;
+
 
 //GRID
 $grid-width: 114rem;
