--- a/natours/sass/components/_button.scss
+++ b/natours/sass/components/_button.scss
@@ -5,9 +5,11 @@
     padding: 1.5rem 4rem;
     display: inline-block;
     border-radius: 10rem;
-    transition: $transition-all-quickest;
+    transition: all .2s;
     position: relative;
     font-size: $default-font-size;
+
+    //Change for the <button> element
     border: none;
     cursor: pointer;
   }
@@ -61,7 +63,7 @@
   }
 
   &--animated {
-    animation: moveInBottom .5 ease-out .75s;
+    animation: moveInBottom .5s ease-out .75s;
     animation-fill-mode: backwards;
   }
 }
