--- a/natours/sass/base/_animations.scss
+++ b/natours/sass/base/_animations.scss
@@ -8,7 +8,7 @@
   }
   100% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate(0);
   }
 }
 
@@ -22,7 +22,7 @@
   }
   100% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate(0);
   }
 }
 
@@ -33,6 +33,6 @@
   }
   100% {
     opacity: 1;
-    transform: translateX(0);
+    transform: translate(0);
   }
 }
