--- a/natours/sass/components/_card.scss
+++ b/natours/sass/components/_card.scss
@@ -1,4 +1,6 @@
 .card {
+
+  // FUNCTIONALITY
   perspective: 150rem;
   -moz-perspective: 150rem;
   position: relative;
@@ -11,6 +13,7 @@
     top: 0;
     left: 0;
     width: 100%;
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
     border-radius: .3rem;
     overflow: hidden;
@@ -45,6 +48,8 @@
     transform: rotateY(0);
   }
 
+
+  // FRONT SIDE STYLING
   &__picture {
     background-size: cover;
     height: 23rem;
@@ -126,6 +131,7 @@
     }
   }
 
+  // FRONT SIDE STYLING
   &__cta {
     @include absCenter;
     width: 90%;
@@ -148,12 +154,9 @@
     font-weight: 100;
   }
 
-
-
-
-
-
+  //@include respond(tab-port) {
   @media only screen and (max-width: 56.25em), only screen and (hover:none)  {
+
     height: auto;
     border-radius: .3rem;
     background-color: $color-white;
@@ -166,7 +169,7 @@
 
       &--back {
         transform: rotateY(0);
-        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0 100%);
+        clip-path: polygon(0 15%, 100% 0, 100% 100%, 0% 100%);
       }
     }
 
@@ -178,6 +181,7 @@
       padding: 1rem 3rem;
     }
 
+    // FRONT SIDE STYLING
     &__cta {
       position: relative;
       top: 0;
