--- a/natours/sass/components/_form.scss
+++ b/natours/sass/components/_form.scss
@@ -68,7 +68,7 @@
     font-size: $default-font-size;
     cursor: pointer;
     position: relative;
-    padding-left: 4.5rem
+    padding-left: 4.5rem;
   }
 
   &__radio-button {
@@ -94,8 +94,7 @@
     }
   }
 
-  &__radio-input:checked ~ &__radio-label > &__radio-button::after {
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
     opacity: 1;
   }
-
 }
