--- a/natours/sass/components/_popup.scss
+++ b/natours/sass/components/_popup.scss
@@ -10,8 +10,9 @@
   visibility: hidden;
   transition: $transition-all-quick;
 
-  @supports (backdrop-filter: blur(10px)) {
-    backdrop-filter: blur(10px);
+  @supports (-webkit-backdrop-filter: blur(1rem)) or (backdrop-filter: blur(1rem)) {
+    -webkit-backdrop-filter: blur(1rem);
+    backdrop-filter: blur(1rem);
     background-color: $color-black-dark;
   }
 
@@ -51,11 +52,11 @@
     margin-bottom: 4rem;
 
     -moz-column-count: 2;
-    -moz-column-gap: 4rem;
+    -moz-column-gap: 4rem; //1em = 14px;
     -moz-column-rule: 1px solid $color-grey-light-2;
 
     column-count: 2;
-    column-gap: 4rem;
+    column-gap: 4rem; //1em = 14px;
     column-rule: 1px solid $color-grey-light-2;
 
     -moz-hyphens: auto;
@@ -64,6 +65,7 @@
     hyphens: auto;
   }
 
+  //Open states
   &:target {
     opacity: 1;
     visibility: visible;
