--- a/natours/sass/layout/_navigation.scss
+++ b/natours/sass/layout/_navigation.scss
@@ -23,8 +23,8 @@
     }
 
     @include respond(phone) {
-      top: 2.5rem;
-      right: 2.5rem;
+      top: 3rem;
+      right: 3rem;
     }
   }
 
@@ -45,8 +45,8 @@
     }
 
     @include respond(phone) {
-      top: 3rem;
-      right: 3rem;
+      top: 3.5rem;
+      right: 3.5rem;
     }
   }
 
@@ -99,6 +99,8 @@
     }
   }
 
+
+  //FUNCTIONALITY
   &__checkbox:checked ~ &__background {
     transform: scale(80);
   }
@@ -108,6 +110,8 @@
     width: 100%;
   }
 
+
+  //ICON
   &__icon {
     position: relative;
     margin-top: 3.5rem;
