--- a/natours/sass/components/_story.scss
+++ b/natours/sass/components/_story.scss
@@ -28,10 +28,8 @@
     overflow: hidden;
     border-radius: 50%;
 
-    @supports (clip-path: polygon(0 0)) or (-webkit-clip-path: polygon(0 0)) {
-      -webkit-clip-path: circle(50% at 50% 50%);
+    @supports (clip-path: polygon(0 0)) {
       clip-path: circle(50% at 50% 50%);
-      -webkit-shape-outside: circle(50% at 50% 50%);
       shape-outside: circle(50% at 50% 50%);
       border-radius: 0;
     }
